--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
- background-color: black;
-    color: white;
+ background-color: white;
+    color: black;
 }
 h1{
  text-align: center;   
@@ -15,4 +15,24 @@ h1{
 .ação{
     margin-left: 30%;
     width: 40%;
+}
+
+.controle{
+    width: 10%;
+    margin-top: 1%;
+}
+ul{
+    display: flex;
+    justify-content: center;
+    justify-content: space-between;
+    list-style-type: none;
+    
+
+}
+
+a{
+color:black ;
+text-decoration: none;
+
+
 }
